test/tests/compiler/14_pointers/invalid_parse/plx1_postfix_addrof.plx
pub fn main(none) i32 {
    x: i32 = 0
    p: *i32 = x@
    return x[]
}
